--- a/todo/core/templates/core/index.html
+++ b/todo/core/templates/core/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-todo/core/templates/core/index.html
+{% load widget_tweaks %}
 {% block body %}
 	
 		<h1> Em construção </h1>
